Beacon integration work and testing.

--- a/ldx-demo/app/src/main/AndroidManifest.xml
+++ b/ldx-demo/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="com.liferay.ldxdemo"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+          xmlns:android="http://schemas.android.com/apk/res/android"
+          android:launchMode="singleInstance">
 
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
@@ -106,6 +107,7 @@
             android:label="@string/title_activity_beacon_receiver"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
+        <service android:name=".beacon.BeaconService"/>
     </application>
 
 </manifest>
